
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dv-flow-libide"
version = "0.0.2"
dependencies = [
    "dv-flow-mgr"
]
authors = [
    {name = "Matthew Ballance", email = "matt.ballance@gmail.com"},
]
description = "Provides dv-flow tasks for maintaining IDE-integration files"
license = {file = "LICENSE" }

[project.entry-points."dv_flow.mgr"]
libide = "dv_flow.libide.__ext__"

[tool.setuptools.package-data]
"dv_flow.libide" = ['**/*.dv']
